fix: block deleting the last default entrypoint on api level (#4531)
AM-3597, #9888

(cherry picked from commit cf7efd02c94d64a9a87fffd6453e38bd9bef7f65)